--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </div>
 
 <script>
-const WEB_APP_URL = 'https://script.google.com/a/macros/tuwaiqcih.org.sa/s/AKfycbz6c7lxANP7viAFKgYWtrsoASwRHVj4qsZN6UeEukECqu-BGzJOjAlGIF9ZO4xrHUiE4g/exec'; 
+const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyoV5Zd8RAUG2ZHxl8ILmcsmYoarSNMR_sJRNpWzeB30eQBb1kGNK4dfjtZpq3x5nLsXQ/exec'; 
 const ok = document.getElementById('ok');
 const err = document.getElementById('err');
 function showOk(msg){ ok.textContent = msg || 'تم بنجاح.'; ok.style.display='inline'; err.style.display='none'; }
