--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
 
 <script>
 // رابط Web App المنشور
-const WEB_APP_URL = 'https://script.google.com/a/macros/tuwaiqcih.org.sa/s/AKfycbz6c7lxANP7viAFKgYWtrsoASwRHVj4qsZN6UeEukECqu-BGzJOjAlGIF9ZO4xrHUiE4g/exec';
+const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyoV5Zd8RAUG2ZHxl8ILmcsmYoarSNMR_sJRNpWzeB30eQBb1kGNK4dfjtZpq3x5nLsXQ/exec';
 
 document.getElementById('btnLogin').addEventListener('click', async () => {
   const loginId = document.getElementById('loginId').value.trim();
